--- a/azure_ratecard/azure_ratecard.csproj
+++ b/azure_ratecard/azure_ratecard.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EB6CB8BD-C041-484C-8FFA-44BED96DEFF0}</ProjectGuid>
+    <ProjectGuid>{BA27A02F-5A16-45F6-A9F8-EA79BC500275}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary1</RootNamespace>
-    <AssemblyName>ClassLibrary1</AssemblyName>
+    <RootNamespace>azure_ratecard</RootNamespace>
+    <AssemblyName>azure_ratecard</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
