add readme notes

--- a/azure_ratecard/appsettings.json
+++ b/azure_ratecard/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "clientId": "",
-    "clientSecret": "",
+    "clientId": "cc3b2b4a-1f9a-4d74-b0b2-ac44bc75612b",
+    "clientSecret": "J3WW6QuLub5rZXQHRrS3VXLGl+r8CHuRiePySSUMiko=",
     "resource": "https://management.azure.com"
 }
